[package]
name = "torque"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
hex = "0.4"

aes-gcm = "0.10.3"
argon2 = "0.5.3"
password-hash = "0.5.0"
rpassword = "7.3"
zeroize = "1.8"

directories = "5.0"

#ML-KEM
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"

x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

serde = { version = "1.0", features = ["derive"] }

hkdf = "0.12.3"
sha2 = "0.10.8"

tokio = { version = "1.36", features = ["full"] }
tokio-socks = "0.5"
base64 = "0.22.1"

rand = { version = "0.8", features = ["std", "getrandom"] }
bincode = "1.3.3"
